# data_ing_cert

./: .gitignore  BASE.ipynb  BASE3.ipynb  DEMO_BDD.ipynb  LAKE.ipynb  PARSER.ipynb  README.md  data_pdf_csv.ipynb  database_excel.ipynb  db_quick_events.ipynb  demo_vestas_report.ipynb  lake.ipynb  pyproject.toml  pytest.ini  requirements.txt  service_report.py  test-camelot.ipynb  test.ipynb  test2.ipynb  test3.ipynb  test4t.ipynb  test5.ipynb  test_base.db  test_base.yml  test_damien.ipynb  test_database.ipynb  test_enercon.ipynb  test_service_report.ipynb  test_vestas.ipynb  test_vestas_report copy.ipynb  test_vestas_report.ipynb  tests_database.ipynb  vestas.py
.cursor/docs/: referenciel_data_ingénieur.md
.idx/: dev.nix
data/: windmanager_test.db  wpd_windmanager_test_database.db
data/CSV/: BOURESSE_E01_Check_ICPE_Electrical_2023-06-28_60680836.csv  BOURESSE_E01_V100_2-2.2MW_MK10C_H_-_Service_6_Year_2023-06-29_60680835.csv  CHOUY_E6_V100_2.0MW_Mk10D_Trafo_inspection_1_Year_2023-11-08_61114030.csv  CHOUY_E6_V100_22.2MW_MK10D_C_-_Service_1_Year_2023-12-21_61114029.csv  Clussais.csv  (+2 more)
database_building/: create_service_reports_checklists.sql  create_service_reports_metadas.sql  table_ingestion_tracking.sql
enums/: __init__.py  enums.py
models/: BASE.py  DataBase.py  DataLake.py  __init__.py  csv_formatter.py  database_manager.py  datalake_manager.py  enercon_report.py  pdf_readers.py  service_report.py  vestas_report.py
service_reports/: __init__.py
tests/: conftest.py  test_enercon_report.py  test_service_report.py  test_utils.py  test_vestas_report.py
(+69 files in other folders)
